--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         }
     ],
     "require": {
-        "php" : ">=5.5.0",
-        "guzzlehttp/guzzle": "^6.1"
+        "php" : "^8.1",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit" : "^9.5.10",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
